<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Fitness Edge</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="menu_start_workout">Start workout</string>
    <string name="get_ready">Get Ready</string>
    <string name="rest">Rest</string>
    <string name="finished">You finished the workout!</string>
    <string-array name="gender">
        <item id="maleid">Male</item>
        <item id="femaleid">Female</item>
    </string-array>
    <string name="menu_settings">Settings</string>
    <string name="total_cals">Total calorie consumption:</string>
    <string name="average_cals">Average calorie consumption per day:</string>
    <string name="total_time">Total overall consumption time:</string>
    <string name="log_button">View Calorie Log</string>
    <string name="title_activity_display_log">Calorie Log</string>
    <string name="add_new_log_entry">Add new entry</string>
    <string name="title_activity_add_new_entry">New Calorie Log Entry</string>
    <string name="date">Date:</string>
    <string name="description">Description:</string>
    <string name="total_calories">Total calories:</string>
    <string name="calories_per_weight">Calories per weight/volume/serving:</string>
    <string name="per_weight">Per weight/volume/serving:</string>
    <string name="total_weight_consumed">Total weight/volume/serving consumed:</string>
    <string name="title_section3">Section 3</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section1">Section 1</string>
    <string name="submit_button">Submit</string>
    <string name="cancel_button">Cancel</string>
    <string name="hint_total_weight">i.e. 200g</string>
    <string name="hint_per_weight">i.e. 65g</string>
    <string name="hint_cal_per_weight">i.e. 220 Cal</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="back_button">Back</string>
    <string name="quit_button">Quit</string>
    <string name="remove_list_item">x</string>
    <string name="about_part1">Fitness Edge App allows you check various activities. App has features like step counter to calculate your daily steps. Various health calculators to check your daily needs and also guides to various exercises.</string>
    <string name="about_part2">Remember to always check with your doctor before exercising and seek professional help to ensure correct form of the exercises.</string>
    <string name="about_part3">The workout videos from Youtube remain the owner\'s, please support them because they do amazing work making them available.</string>
    <string name="about_part4">Permissions Required: Internet. Step Counter is not supported on all android phones. Please check your phone specification before use.</string>
    <string name="about_part5">This application requires the internet in order to play Youtube videos that describe each exercise. (The Youtube application needs to be installed in order to view these videos)</string>
    <string name="about_part6">This application requires the internet in order to use Crashlytics to collect data when and only when the application crashes. The data collected will help to identify the cause of the crash.</string>
    <string name="feedbacktype1">--Options--</string>
    <string name="feedbacktype2">Gripe</string>
    <string name="feedbacktype3">Suggestion</string>
    <string name="feedbacktype4">Bug</string>
    <string name="feedbacktype5">Praise</string>
    <string name="action_set">Settings</string>
    <string name="step_counter">android.hardware.sensor.stepcounter</string>
    <string name="step_detector">android.hardware.sensor.stepdetector</string>
    <string name="stats_button">Stats</string>
    <string name="title_activity_stats">Stats</string>
    <string name="steps_left_text">more steps left until 10,000 steps!</string>
    <string name="act_settings">Settings</string>
    <string name="height_feet">Height (feet only)</string>
    <string name="height_inches">Height (Inches)</string>
    <string name="weight_pounds">Weight (lbs)</string>
    <string name="go_button">Go</string>
    <string name="bmiLogo">Body Mass Index Calculator</string>
    <string name="bmrLogo">Base Metabolic Rate Calculator</string>
    <string name="bodyFatLogo">Body Fat Percentage Calculator</string>
    <string name="macrosLogo">Macros Calculator</string>
    <string name="metric">Metric</string>
    <string name="imperial">Imperial</string>
    <string name="units">Units:</string>
    <string name="height">Height:</string>
    <string name="inches">Inches</string>
    <string name="cm">Centimeters</string>
    <string name="weight">Weight:</string>
    <string name="pounds">Pounds</string>
    <string name="kg">Kilograms</string>
    <string name="calculate">Calculate</string>
    <string name="sex">Sex:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="age">Age:</string>
    <string name="years">Years Old</string>
    <string name="waistLogo">Waist Circumference:</string>
    <string name="wristLogo">Wrist Circumference:</string>
    <string name="hipLogo">Hip Circumference:</string>
    <string name="forearmLogo">Forearm Circumference:</string>
    <string name="edit_message">0</string>
    <string name="button_calculate">Calculate</string>
    <string name="calories_burned">Calories Burned</string>
    <string name="disclaimer">**All calculations are based on data for a 150lb adult.</string>
    <string name="instructions">Select an exercise and enter the quantity (in reps or minutes) to calculate the number of calories burned or select \"Calorie Target\" and enter the number of calories you would like to burn for the necessary quantity for each exercise.</string>
    <string-array name="exercise_array">
        <item>Pushup (reps)</item>
        <item>Situp (reps)</item>
        <item>Squats (reps)</item>
        <item>Pullup (reps)</item>
        <item>Leg-lift (minutes)</item>
        <item>Plank (minutes)</item>
        <item>Jumping Jacks (minutes)</item>
        <item>Cycling (minutes)</item>
        <item>Walking (minutes)</item>
        <item>Jogging (minutes)</item>
        <item>Swimming (minutes)</item>
        <item>Stair-Climbing (minutes)</item>
        <item>Calorie Target</item>
    </string-array>
    <string name="presets">Select a Preset</string>
    <string name="preset_button_highCarbs">60/25/15\nHigh Carbs</string>
    <string name="preset_button_moderate">50/30/20\nModerate</string>
    <string name="preset_button_lowCarbs">20/40/40\nLow Carbs</string>
    <string name="customize">Or Customize...</string>
    <string name="carbohydrates_label">Carbohydrates:</string>
    <string name="protein_label">Proteins:</string>
    <string name="fat_label">Fats:</string>
    <string name="initialize_seekbar_percent">0%</string>
    <string name="daily_calories_text">Daily Calories:</string>
    <string name="dont_know_button">Don\'t Know?</string>
    <string name="calculate_button">Calculate</string>
    <string name="zero">0</string>
    <string name="imperial_US">Imperial (US)</string>
    <string name="gender_label">Gender</string>
    <string name="age_label">Age (Years)</string>
    <string name="weight_label_us">Weight (lbs)</string>
    <string name="weight_label_metric">Weight (kgs)</string>
    <string name="height_label_us">Height (in.)</string>
    <string name="height_label_metric">Height (cm.)</string>
    <string name="activity_level_label">Activity Level</string>
    <string name="your_goals_label">You want to...</string>
    <string name="recommended_label">Recommended Calories</string>
    <string name="use_this_value_button">Use this\n value</string>
    <string name="minimum_calc">(Only calculates a minimum of 1000 calories.)</string>
    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="activity_level_array">
        <item>Little to no exercise</item>
        <item>Light exercise (1–3 days per week)</item>
        <item>Moderate exercise (3–5 days per week)</item>
        <item>Heavy exercise (6–7 days per week)</item>
        <item>Very heavy exercise (twice per day, heavy)</item>
    </string-array>
    <string-array name="your_goals_array">
        <item>Lose 1 Pound/Kg per week</item>
        <item>Lose .5 Pound/Kg per week</item>
        <item>Maintenence Calories</item>
        <item>Gain .5 Pound/Kg per week</item>
        <item>Gain 1 Pound/Kg per week</item>
    </string-array>
    <string name="lbl_gender">Gender</string>
    <string name="lbl_age">Age</string>
    <string name="lbl_weight">Weight (lb)</string>
    <string name="lbl_height">Height (in)</string>
    <string name="maintain_weight">Maintain</string>
    <string name="moderately_active">Moderate</string>
    <string name="lbl_activity">Activity Level</string>
    <string name="lbl_goal">Weight goal</string>
    <string name="lbl_bmr">BMR</string>
    <string name="def_bmr">Basal Metabolic Rate</string>
    <string name="lbl_tdee">TDEE</string>
    <string name="def_tdee">Total Daily Energy Expenditure</string>
    <string name="lbl_total_calories">Target Daily Calories</string>
    <string name="lbl_chg_calories">Daily Caloric Change</string>
    <string name="lbl_calculate">Calculate</string>
    <string name="lbl_about">About</string>
    <string name="lbl_additional">Additional calories</string>
    <string name="lbl_duration">Duration (min)</string>
    <string name="lbl_add">Add</string>
    <string name="key_preferences">cic_preferences</string>
    <string name="key_gender">gender</string>
    <string name="key_age">age</string>
    <string name="key_weight">weight</string>
    <string name="key_height">height</string>
    <string name="key_goal">goal</string>
    <string name="key_activity">activity</string>
    <string name="key_weight_unit">weight_unit</string>
    <string name="key_height_unit">height_unit</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Delete Account</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Fitness Edge</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Fitness Edge now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Delete</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
</resources>