<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_bmi"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.faraz.navigationapp.HealthCalc.Bmi">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.faraz.navigationapp.HealthCalc.Bmi"
        android:id="@+id/rel1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/bmiLogo"
            android:id="@+id/textView"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/units"
            android:id="@+id/textView2"
            android:layout_below="@+id/textView"
            android:layout_alignParentStart="true" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radiogroup"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/textView2"
            android:orientation="horizontal">


            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/imperial"
                android:id="@+id/imperial"
                android:checked="true" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/metric"
                android:id="@+id/metric"
                android:layout_gravity="center_horizontal"
                android:checked="false" />

        </RadioGroup>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/radiogroup"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/height"
            android:id="@+id/textView3"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/heightValue"
            android:layout_below="@+id/textView3"
            android:layout_toEndOf="@+id/textView2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/inches"
            android:id="@+id/heightUnit"
            android:layout_alignTop="@+id/heightValue"
            android:layout_toEndOf="@+id/heightValue" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/weight"
            android:id="@+id/textView5"
            android:layout_below="@+id/heightValue"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/weightValue"
            android:layout_below="@+id/textView5"
            android:layout_toEndOf="@+id/textView2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/pounds"
            android:id="@+id/weightUnit"
            android:layout_alignTop="@+id/weightValue"
            android:layout_toEndOf="@+id/weightValue" />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculate"
            android:id="@+id/submit"
            android:textColor="#FFFFFF"
            android:theme="@style/FBButton"
            android:layout_below="@+id/weightValue"
            android:layout_toEndOf="@+id/textView2" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/bmiResult"
            android:layout_below="@+id/submit" />





    <TextView
        android:layout_below="@+id/bmiResult"
        android:id="@+id/disadvantageHead"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#fffa0e69"
        android:layout_gravity="center"
        android:text="Disadvantages"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:gravity="center"/>

    <TextView
        android:id="@+id/disadvantageTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/disadvantageHead"
        android:text=""
        android:textColor="#000"
        android:textSize="20sp"/>


    <TextView
        android:id="@+id/advantageHead"
        android:layout_below="@+id/disadvantageTextView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#ffabfa9c"
        android:text="Advantages"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:layout_alignParentStart="true"
        android:layout_marginTop="9dp" />


        <TextView
            android:id="@+id/advantageTextView"
            android:layout_below="@+id/advantageHead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="#000"
            android:textSize="20sp"/>
    </RelativeLayout>

</ScrollView>

